--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,7 +9,7 @@
   <body>
     <div class="wrapper">
       <div class="title">
-        Reddot - Login 
+        Reddit - Login 
         </div>
 
 
