--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 
 <html lang="en" dir="ltr">
+
+<title>Login Reddit</title>
   <head>
     <meta charset="utf-8">
-
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <div class="wrapper">
       <div class="title">
-        Reddit - Login 
+        Reddit - Login
         </div>
 
 
