--- a/views/main.ejs
+++ b/views/main.ejs
@@ -30,7 +30,7 @@
           <li><a href="/authors">Top Authors</a></li>
           <li><a href="/domains">Most shared domains</a></li>
           <li><a href="/main#contact-btn">Contact</a></li>
-          <li><a href="/login">Log Out</a></li>
+          <li><a href="/logout">Log Out</a></li>
 
 
         </ul>
